[package]
name = "dungeond"
version = "0.1.0"
authors = ["Giacomo Picchiarelli <gpicchiarelli@gmail.com>"]
edition = "2018"
description = "A modular honeypot for OpenBSD"
license_file = "LICENSE"
license = "" BSD-3-Clause
repository = "https://github.com/gpicchiarelli/dungeond.git"

[dependencies]
unveil = "0.2.0"
pledge = "0.3.1"

[badges]

